2006-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* arc-mode.el (archive-extract): Check if an existing buffer name
	comes from a different archive.

	* help.el (describe-key-briefly): If KEY is a down event, read and
	discard the up event.

2006-03-07  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-speedbar-buttons): Allow pointers to
	be edited and use font-lock-warning-face for any changes.

	* progmodes/gdb-ui.el (gdb-edit-value-handler): New function.
	(gdb-edit-value): Use it to report any errors.

2006-03-07  Juanma Barranquero  <lekktu@gmail.com>

	* help.el (describe-key): Remove leftover test code.

2006-03-07  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el: Move defvars out of eval-when-compile.  Use
	buffer-file-name variable.
	(org-agenda-file-to-end, org-agenda-file-to-front): Remove unused
	arg `file'.
	(org-level-faces): Remove startup dependency.
	(org-cycle, org-map-tree, org-scan-tags)
	(org-remember-handler): Don't call `outline-level' directly.
	(org-mhe-search-all-folders): New option.
	(org-mhe-get-message-folder-from-index)
	(org-mhe-get-message-folder): Fix indexing search.
	(org-format-agenda-item): Handle nil TAGS argument.
	(org-cleaned-string-for-export, org-activate-target-links)
	(org-make-target-link-regexp): Deal with empty radio target list.
	(org-tag): New face.
	(org-get-level-face): New function.
	(org-set-font-lock-defaults): Simplify setup for headlines.
	(org-complete): Pass common substring to
	`display-completion-list'.

2006-03-06  David Ponce  <david@dponce.com>

	* tree-widget.el: Update Commentary header.
	(tree-widget-theme-name): Ignore parent themes.
	(tree-widget-set-parent-theme): New function.
	(tree-widget-set-theme): Use it.
	(tree-widget-set-image-properties): Move definition.  Does nothing
	if image properties have already been set.
	(tree-widget-image-properties): Move definition.  Receive an image
	name.  Set the :pointer property.