@@ -1,5 +1,8 @@
 2006-03-07  Chong Yidong  <cyd@stupidchicken.com>
 
+	* files.el (hack-local-variables-confirm): Set
+	coding-system-for-read to nil before writing to .emacs.
+
 	* arc-mode.el (archive-extract): Check if an existing buffer name
 	comes from a different archive.
 
